--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "compile": "babel --presets es2015-loose,stage-1 --plugins transform-runtime src/ --out-dir app/ --retain-lines",
     "watch-compile": "node -e \"console.log('<npm run watch-compile> no longer need, use <npm start> command direct.');console.log();\"",
     "watch": "npm run watch-compile",
-    "webpack": "webpack --progress --colors"
+    "webpack": "node webpack.config.js"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
     "css-loader": "^0.23.1",
     "css-path-loader": "^0.2.15",
     "fit-button": "^2.0.40",
+    "history": "^2.0.1",
     "html-path-loader": "^0.1.10",
+    "jquery": "^2.2.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-router": "^2.0.1",
+    "revalidator": "^0.3.1",
+    "think-react-render": "^1.0.3",
     "thinkjs": "2.1.x"
   },
   "devDependencies": {
+    "babel-cli": "6.x.x",
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-object-assign": "^6.3.13",
@@ -28,16 +33,17 @@
     "babel-polyfill": "^6.6.1",
     "babel-preset-airbnb": "^1.0.1",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "babel-cli": "6.x.x",
-    "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-stage-1": "6.x.x",
+    "babel-register": "^6.4.3",
     "css-loader": "^0.23.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": "",
   "license": "MIT"
