--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["es2015", "react", "stage-0"],
-  "plugins": ["transform-object-assign"]
+  "plugins": [
+    "transform-object-assign",
+    "add-module-exports"
+  ]
 }
