--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
 				"NODE_ENV": "development"
 			},
 			"externalConsole": false,
-			"sourceMaps": false,
+			"sourceMaps": true,
 			"outDir": null
 		},
 		{
@@ -28,7 +28,7 @@
 			"port": 5858,
 			"address": "localhost",
 			"restart": false,
-			"sourceMaps": false,
+			"sourceMaps": true,
 			"outDir": null,
 			"localRoot": "${workspaceRoot}",
 			"remoteRoot": null
