--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "6.x.x",
     "css-loader": "^0.23.1",
     "css-path-loader": "^0.2.15",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fit-button": "^2.0.40",
     "history": "^2.0.1",
     "html-path-loader": "^0.1.10",
@@ -23,7 +24,10 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-router": "^2.0.1",
+    "request": "^2.70.0",
     "revalidator": "^0.3.1",
+    "superagent": "^1.8.3",
+    "superagent-promise": "^1.1.0",
     "think-react-render": "^1.0.3",
     "thinkjs": "2.1.x"
   },
@@ -31,6 +35,7 @@
     "babel-cli": "6.x.x",
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-object-assign": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-polyfill": "^6.6.1",
