--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "browser-sync": "^2.11.2",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.1",
+    "ignore-stylesheet-loader": "^1.0.0",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
