删除无关的文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,14 +4,14 @@ server {
     root /Users/andycall/baiduYun/毕业设计//Users/andycall/baiduYun/毕业设计/website/www;
     set $node_port 8360;
 
-    index index.js index.html index.htm;
+    index client.js index.html index.htm;
     if ( -f $request_filename/index.html ){
         rewrite (.*) $1/index.html break;
     }
     if ( !-f $request_filename ){
-        rewrite (.*) /index.js;
+        rewrite (.*) /client.js;
     }
-    location = /index.js {
+    location = /client.js {
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -85,14 +85,14 @@ server {
 #     add_header X-Frame-Options deny;
 #     add_header Strict-Transport-Security "max-age=16070400";
 # 
-#     index index.js index.html index.htm;
+#     index client.js index.html index.htm;
 #     if ( -f $request_filename/index.html ){
 #         rewrite (.*) $1/index.html break;
 #     }
 #     if ( !-f $request_filename ){
-#         rewrite (.*) /index.js;
+#         rewrite (.*) /client.js;
 #     }
-#     location = /index.js {
+#     location = /client.js {
 #         proxy_http_version 1.1;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
