--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^1.0.1"
   },
   "repository": {
     "type": "git",
