--- a/package.json
+++ b/package.json
@@ -45,13 +45,20 @@
     "browser-sync": "^2.11.2",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.1",
+    "css-path-loader": "^0.2.17",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-path-loader": "^0.1.12",
     "ignore-stylesheet-loader": "^1.0.0",
+    "image-webpack-loader": "^1.7.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "extract-text-webpack-plugin": "^1.0.1"
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
