--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "bootstrap": "^3.3.6",
+    "font-awesome": "^4.6.1",
     "history": "^2.0.1",
     "html-path-loader": "^0.1.10",
     "jquery": "^2.2.3",
     "lodash": "^4.10.0",
     "moment": "^2.12.0",
     "phpass": "^0.1.1",
+    "rc-tooltip": "^3.3.2",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-modal": "^1.1.2",
     "react-router": "^2.0.1",
     "request": "^2.70.0",
     "revalidator": "^0.3.1",
