--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-runtime": "6.x.x",
     "bootstrap": "^3.3.6",
+    "classnames": "^2.2.5",
     "font-awesome": "^4.6.1",
     "history": "^2.0.1",
     "html-path-loader": "^0.1.10",
