--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-runtime": "6.x.x",
     "bootstrap": "^3.3.6",
     "classnames": "^2.2.5",
+    "draft-js": "^0.7.0",
+    "draft-js-export-html": "^0.2.2",
     "font-awesome": "^4.6.1",
     "history": "^2.0.1",
     "html-path-loader": "^0.1.10",
@@ -25,12 +27,17 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-modal": "^1.1.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
+    "react-textarea-autosize": "^4.0.1",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.9.1",
     "request": "^2.70.0",
     "revalidator": "^0.3.1",
     "superagent": "^1.8.3",
     "superagent-promise": "^1.1.0",
-    "thinkjs": "2.1.x"
+    "thinkjs": "2.1.x",
+    "xss": "^0.2.13"
   },
   "devDependencies": {
     "babel-cli": "6.x.x",
@@ -50,7 +57,7 @@
     "browser-sync": "^2.11.2",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.1",
-    "css-path-loader": "^0.2.17",
+    "css-path-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-path-loader": "^0.1.12",
