--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
