--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "bluebird": "^3.4.0",
     "bootstrap": "^3.3.6",
     "classnames": "^2.2.5",
     "draft-js": "^0.7.0",
